--- a/GettingStartedMassTransit.Web/GettingStartedMassTransit.Publisher.Web.csproj
+++ b/GettingStartedMassTransit.Web/GettingStartedMassTransit.Publisher.Web.csproj
@@ -11,13 +11,14 @@
   <ItemGroup>
     <PackageReference Include="MassTransit.AmazonSQS" Version="8.2.3" />
     <PackageReference Include="MassTransit.AspNetCore" Version="7.3.1" />
+    <PackageReference Include="MassTransit.Newtonsoft" Version="8.3.2" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.3" />
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\GettingStartedMassTransit.Consumer.Web\GettingStartedMassTransit.Consumer.Web.csproj" />
   </ItemGroup>
 
 </Project>
