feat: serialisation and deserialisation with one queue and business app type in message

--- a/GettingStartedMassTransit.Consumer.Web/appsettings.json
+++ b/GettingStartedMassTransit.Consumer.Web/appsettings.json
@@ -9,8 +9,19 @@
   "enabledSaaS": true,
   "AWS": {
     "region": "eu-west-1",
-    "accessKeyID": "xxx",
-    "secretAccessKey": "xxx",
-    "sessionToken": "xxx"
+    "accessKeyID": "",
+    "secretAccessKey": "",
+    "sessionToken": ""
+  },
+  "EventStoreDatabase": {
+    "DatabaseName": "EventStore",
+    "MessageEventCollectionName": "Events",
+    "ConnectionStrings": "mongodb://root:yourStrong(!)Password@127.0.0.1:27017/"
+  },
+  "AuditTrailDatabase": {
+    "DatabaseName": "AuditTrail",
+    "ApplicationBetaCollectionName": "Beta",
+    "AuditTrailCollectionName": "AuditTrail",
+    "ConnectionStrings": "mongodb://root:yourStrong(!)Password@127.0.0.1:27017/"
   }
 }
