--- a/GettingStartedMassTransit.Web/appsettings.json
+++ b/GettingStartedMassTransit.Web/appsettings.json
@@ -9,7 +9,8 @@
   "enabledSaaS": true,
   "AWS": {
     "region": "eu-west-1",
-    "accessKeyID": "xxx",
-    "secretAccessKey": "xxx",
-    "sessionToken": "xxx"
+    "accessKeyID": "",
+    "secretAccessKey": "",
+    "sessionToken": ""
+  }
 }
