--- a/GettingStartedMassTransit.Consumer.Web/GettingStartedMassTransit.Consumer.Web.csproj
+++ b/GettingStartedMassTransit.Consumer.Web/GettingStartedMassTransit.Consumer.Web.csproj
@@ -14,11 +14,16 @@
     <PackageReference Include="MassTransit.Newtonsoft" Version="8.3.2" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.2.3" />
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.20.1" />
+    <PackageReference Include="MongoDB.Driver" Version="3.1.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\GettingStartedMassTransit.Common.EventBus\GettingStartedMassTransit.Common.EventBus.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Models\Common\" />
   </ItemGroup>
 
 </Project>
